[package]
name = "cases"
version = "0.2.4"
authors = ["Marc Esquerra <esquerra@bryghts.com>"]
edition = "2018"
description = "Case converting utility for the console"
license = "Unlicense"
homepage = "https://github.com/marcesquerra/cases"
repository = "https://github.com/marcesquerra/cases"

[dependencies]
nom = "7.1.1"
